# floem

./: .gitignore  build.rs
docs/: shadcn-component-status.md
examples/widget-gallery/: Cargo.toml
examples/widget-gallery/src/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  attachment.rs  avatar.rs  background_blur.rs  badge.rs  bevy_render_test.rs  breadcrumb.rs  bubble.rs  button_group.rs  buttons.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  corner_smoothing.rs  dialog.rs  direction.rs  drawer.rs  dropdown_menu.rs  empty_state.rs  field.rs  hover_card.rs  icons.rs  images.rs  input_group.rs  input_otp.rs  inputs.rs  item.rs  kbd.rs  labels.rs  main.rs  marker.rs  (+29 more)
renderer/src/: lib.rs
src/: action.rs  ext_event.rs  lib.rs
src/icons/: mod.rs
src/paint/: corners.rs  mod.rs  renderer.rs
src/style/: components.rs  mod.rs  theme.rs
src/view/: id.rs  mod.rs  state.rs
src/views/: checkbox.rs  dropdown.rs  img.rs  radio_button.rs  slider.rs  text_input.rs  toggle_button.rs  tooltip.rs
src/window/: handle.rs  tracking.rs
test/tests/: keyboard_interaction.rs
vello/: Cargo.toml
vello/src/: backdrop_blur.rs  lib.rs
