[package]
name = "widget-gallery"
version = "0.1.0"
edition = "2024"

[dependencies]
floem = { path = "../.." }
strum = { workspace = true }
files = { path = "../files/", optional = true }
bytemuck = { version = "1", features = ["derive"] }
wgpu = { workspace = true }
bevy = { version = "0.18.1", default-features = false, features = [
  "std",
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
signpost = "*"

[features]
default = ["full"]
vello = ["floem/vello"]
full = ["dep:files"]
bevy-render-test = ["dep:bevy"]
